@@ -1,4 +1,5 @@
 version 0.7.0 - currently working on
+- [#2349] Change: Enabled setting of labels for whole template (thanks to Olaf Schumann)
 - [#2351] Fix: Recursive flag not taken into account when "Ignore group selection" active (Thanks to Olaf Schumann)
 - [#90] Feature: Use oelib for templating stuff
 - [#2270] Fix: Compatibility with TYPO3 4.3
